2007-06-18  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* configure.in: Post release version bump.

======================= libgnome 2.19.0 ========================

2007-06-18  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* NEWS: Update for the 2.19.0 release
	* doc/reference/tmpl/gnome-program.sgml:

2007-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Portability fix. == vs = in test.
	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	* schemas/desktop_gnome_accessibility_keyboard.schemas.in:
	* schemas/desktop_gnome_applications_at_mobility.schemas.in:
	Fix typos spotted by Kenneth Nielsen. Closes bug #429751.

2007-04-09  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c:
	Add some more info to the docs for gnome_program_init().
	Thanks go to Christian Persch. Closes bug #82943.

2007-04-09  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/libgnome-2.0-uninstalled.pc.in:
	* libgnome/libgnome-2.0.pc.in:
	Add esound to Requires.private. Bug #405352.

2007-04-01  Matthias Clasen  <mclasen@redhat.com>

	* libgnome/gnome-program.c (gnome_program_preinit): Set
	the program name to the basename of argv[0]. This is
	expected by other parts of the stack, and e.g. makes bug-buddy
	work for applets again.  (#424949)

2007-02-24  Christian Persch  <chpe@svn.gnome.org>

	* libgnome/Makefile.am: Rebuild the type builtins when the Makefile
	changes.

	* libgnome/gnome-config.c:
	* libgnome/gnome-exec.c:
	* libgnome/gnome-gconf.c:
	* libgnome/gnome-help.c:
	* libgnome/gnome-i18n.c:
	R libgnome/gnome-i18nP.h:
	* libgnome/gnome-init.c:
	* libgnome/gnome-open.c:
	* libgnome/gnome-program.c:
	* libgnome/gnome-score.c:
	* libgnome/gnome-url.c: Replace gnome-i18n.P with glib/gi18n-lib.h.

======================= libgnome 2.18.0 ========================

2007-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.c:
	* tests/test-help-path.c:
	Remove duplicated header includes.
